--- a/src/app/views/findWords/styles.css
+++ b/src/app/views/findWords/styles.css
@@ -10,3 +10,34 @@ body {
 	margin-top: 20px;
 	border: 3px solid #000;
 }
+
+#loginForm {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+#login {
+	display: block;
+	width: 40%;
+	font-size: 20px;
+	margin: auto;
+}
+
+#submit {
+	display: block;
+	margin: auto;
+	font-size: 24px;
+}
+
+.login-info {
+	display: block;
+	margin: auto;
+	margin-top: 30px;
+	color: #fff;
+	width: 40%;
+	font-size: 30px;
+}
