--- a/src/app/views/findWords/body.html
+++ b/src/app/views/findWords/body.html
@@ -1,6 +1,6 @@
 <canvas id="field"></canvas>
 <div id="loginForm">
-	<label for="" class="login-info">Введите логин</label>
+	<label for="" class="login-info">Введите имя</label>
 	<input type="text" name="" id="login" /><br />
 	<button id="submit" disabled>Продолжить</button>
 </div>
