--- a/src/app/views/findWords/styles.css
+++ b/src/app/views/findWords/styles.css
@@ -16,7 +16,7 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(200, 200, 200, 0.8);
 }
 
 #login {
@@ -30,13 +30,16 @@ body {
 	display: block;
 	margin: auto;
 	font-size: 24px;
+	border-radius: 5px;
+	border: black 1px solid;
 }
 
 .login-info {
 	display: block;
 	margin: auto;
 	margin-top: 30px;
-	color: #fff;
+	color: #000;
 	width: 40%;
 	font-size: 30px;
+	text-align: center;
 }
